--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start_client": "npm start --prefix front-react",
+    "start_node": "node index.js",
+    "start_dev" : "concurrently \"npm run start_node\" \"npm run start_client\" "
   },
   "repository": {
     "type": "git",
@@ -14,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^8.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
